Proyecto1/parser/parser.output
Terminales no usados en la gramática

    res_struct
    res_atoi
    res_atof
    res_iota


Estado 150 conflictos: 2 desplazamiento/reducción
Estado 151 conflictos: 2 desplazamiento/reducción
Estado 152 conflictos: 2 desplazamiento/reducción
Estado 153 conflictos: 2 desplazamiento/reducción
Estado 154 conflictos: 14 desplazamiento/reducción
Estado 155 conflictos: 2 desplazamiento/reducción
Estado 156 conflictos: 2 desplazamiento/reducción
Estado 157 conflictos: 14 desplazamiento/reducción
Estado 158 conflictos: 2 desplazamiento/reducción
Estado 159 conflictos: 2 desplazamiento/reducción
Estado 160 conflictos: 2 desplazamiento/reducción
Estado 161 conflictos: 2 desplazamiento/reducción
Estado 162 conflictos: 2 desplazamiento/reducción
Estado 163 conflictos: 2 desplazamiento/reducción


Gramática

    0 $accept: START END

    1 START: MAIN
    2      | LIST_FUNC MAIN

    3 LIST_FUNC: LIST_FUNC FUNC
    4          | FUNC

    5 MAIN: tk_void rmain tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    6 LIST_INST: LIST_INST INSTRUCTION
    7          | INSTRUCTION

    8 INSTRUCTION: PRINT ';'
    9            | DECLARAR ';'
   10            | ASIGNAR ';'
   11            | VECTOR ';'
   12            | BREAK ';'
   13            | CONT ';'
   14            | RETORNO ';'
   15            | INCREMENTO ';'
   16            | LLAMADAF ';'
   17            | WHILE
   18            | FOR
   19            | IF
   20            | error ';'

   21 DECLARAR: TYPES id
   22         | TYPES id '=' EXP

   23 ASIGNAR: id '=' EXP
   24        | id tk_LLAVA EXP tk_LLAVC '=' tk_LLAVA EXP tk_LLAVC

   25 IF: res_IF tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELIF_LIST ELSE
   26   | res_IF tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELSE

   27 ELIF_LIST: ELIF_LIST ELIF
   28          | ELIF

   29 ELIF: res_ELSE res_IF tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC

   30 ELSE: res_ELSE tk_LLAVA LIST_INST tk_LLAVC
   31     | ε

   32 WHILE: res_WHILE tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC

   33 FOR: res_FOR tk_PARA DECLARAR ';' EXP ';' ASIGNAR tk_PARC tk_LLAVA LIST_INST tk_LLAVC

   34 BREAK: res_BREAK

   35 CONT: res_CONTINUE

   36 VECTOR: res_VECTOR tk_menorq TYPES tk_mayorq id '=' tk_CORCHA LISTAEXP tk_CORCHC
   37       | res_VECTOR tk_menorq TYPES tk_mayorq id
   38       | id '.' res_pushB tk_PARA EXP tk_PARC
   39       | id '.' res_pushF tk_PARA EXP tk_PARC
   40       | id '.' res_get tk_PARA EXP tk_PARC
   41       | id '.' res_remove tk_PARA EXP tk_PARC
   42       | id '.' res_size tk_PARA tk_PARC

   43 PRINT: PRINTF tk_PARA EXP tk_PARC

   44 INCREMENTO: id mas_mas
   45           | id menos_menos

   46 FUNC: TYPES id tk_PARA LISTPARAM tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   47     | TYPES id tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

   48 CALL_EXP: id tk_PARA LISTAEXP tk_PARC
   49         | id tk_PARA tk_PARC

   50 LLAMADAF: id tk_PARA LISTAEXP tk_PARC
   51         | id tk_PARA tk_PARC

   52 RETORNO: res_RETURN EXP
   53        | res_RETURN

   54 TYPES: tk_int
   55      | tk_string
   56      | tk_float
   57      | tk_bool
   58      | tk_void

   59 LISTAEXP: LISTAEXP ',' EXP
   60         | EXP

   61 LISTPARAM: LISTPARAM ',' TYPES id
   62          | TYPES id

   63 EXP: EXP suma EXP
   64    | EXP menos EXP
   65    | EXP mult EXP
   66    | EXP div EXP
   67    | EXP modulo EXP
   68    | tk_PARA EXP tk_PARC
   69    | EXP tk_menor_igual EXP
   70    | EXP tk_menorq EXP
   71    | EXP tk_mayor_igual EXP
   72    | EXP tk_mayorq EXP
   73    | EXP tk_igualq EXP
   74    | EXP tk_diferenteq EXP
   75    | EXP tk_and EXP
   76    | EXP tk_or EXP
   77    | EXP tk_not EXP
   78    | PRIMITIVE
   79    | CALL_EXP

   80 PRIMITIVE: NUMERO
   81          | CADENA
   82          | id
   83          | DECIMAL
   84          | tk_true
   85          | tk_false
   86          | res_mean tk_PARA id tk_PARC
   87          | res_median tk_PARA id tk_PARC
   88          | res_mode tk_PARA id tk_PARC


Terminales con las reglas donde aparecen

    END (0) 0
    ',' (44) 59 61
    '.' (46) 38 39 40 41 42
    ';' (59) 8 9 10 11 12 13 14 15 16 20 33
    '=' (61) 22 23 24 36
    error (256) 20
    NUMERO <std::string> (258) 80
    id <std::string> (259) 21 22 23 24 36 37 38 39 40 41 42 44 45 46 47 48 49 50 51 61 62 82 86 87 88
    CADENA <std::string> (260) 81
    DECIMAL <std::string> (261) 83
    suma <std::string> (262) 63
    menos <std::string> (263) 64
    mult <std::string> (264) 65
    div <std::string> (265) 66
    modulo <std::string> (266) 67
    PRINTF <std::string> (267) 43
    tk_void <std::string> (268) 5 58
    tk_int <std::string> (269) 54
    tk_string <std::string> (270) 55
    tk_float <std::string> (271) 56
    tk_bool <std::string> (272) 57
    tk_PARA <std::string> (273) 5 25 26 29 32 33 38 39 40 41 42 43 46 47 48 49 50 51 68 86 87 88
    tk_PARC <std::string> (274) 5 25 26 29 32 33 38 39 40 41 42 43 46 47 48 49 50 51 68 86 87 88
    rmain <std::string> (275) 5
    tk_LLAVA <std::string> (276) 5 24 25 26 29 30 32 33 46 47
    tk_LLAVC <std::string> (277) 5 24 25 26 29 30 32 33 46 47
    tk_true <std::string> (278) 84
    tk_false <std::string> (279) 85
    tk_igualq <std::string> (280) 73
    tk_diferenteq <std::string> (281) 74
    tk_mayor_igual <std::string> (282) 71
    tk_menor_igual <std::string> (283) 69
    tk_CORCHA <std::string> (284) 36
    tk_CORCHC <std::string> (285) 36
    tk_menorq <std::string> (286) 36 37 70
    tk_mayorq <std::string> (287) 36 37 72
    tk_and <std::string> (288) 75
    tk_or <std::string> (289) 76
    tk_not <std::string> (290) 77
    res_IF <std::string> (291) 25 26 29
    res_ELSE <std::string> (292) 29 30
    res_WHILE <std::string> (293) 32
    res_FOR <std::string> (294) 33
    res_BREAK <std::string> (295) 34
    res_CONTINUE <std::string> (296) 35
    res_RETURN <std::string> (297) 52 53
    res_pushB <std::string> (298) 38
    res_pushF <std::string> (299) 39
    res_get <std::string> (300) 40
    res_remove <std::string> (301) 41
    res_size <std::string> (302) 42
    res_struct <std::string> (303)
    res_mean <std::string> (304) 86
    res_median <std::string> (305) 87
    res_mode <std::string> (306) 88
    res_atoi <std::string> (307)
    res_atof <std::string> (308)
    res_iota <std::string> (309)
    res_VECTOR <std::string> (310) 36 37
    mas_mas <std::string> (311) 44
    menos_menos <std::string> (312) 45


No terminales con las reglas donde aparecen

    $accept (62)
        on left: 0
    START <func_main*> (63)
        on left: 1 2
        on right: 0
    LIST_FUNC <list_instruction*> (64)
        on left: 3 4
        on right: 2 3
    MAIN <func_main*> (65)
        on left: 5
        on right: 1 2
    LIST_INST <list_instruction*> (66)
        on left: 6 7
        on right: 5 6 25 26 29 30 32 33 46 47
    INSTRUCTION <instruction*> (67)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20
        on right: 6 7
    DECLARAR <instruction*> (68)
        on left: 21 22
        on right: 9 33
    ASIGNAR <instruction*> (69)
        on left: 23 24
        on right: 10 33
    IF <instruction*> (70)
        on left: 25 26
        on right: 19
    ELIF_LIST <list_instruction*> (71)
        on left: 27 28
        on right: 25 27
    ELIF <instruction*> (72)
        on left: 29
        on right: 27 28
    ELSE <list_instruction*> (73)
        on left: 30 31
        on right: 25 26
    WHILE <instruction*> (74)
        on left: 32
        on right: 17
    FOR <instruction*> (75)
        on left: 33
        on right: 18
    BREAK <instruction*> (76)
        on left: 34
        on right: 12
    CONT <instruction*> (77)
        on left: 35
        on right: 13
    VECTOR <instruction*> (78)
        on left: 36 37 38 39 40 41 42
        on right: 11
    PRINT <instruction*> (79)
        on left: 43
        on right: 8
    INCREMENTO <instruction*> (80)
        on left: 44 45
        on right: 15
    FUNC <instruction*> (81)
        on left: 46 47
        on right: 3 4
    CALL_EXP <expression*> (82)
        on left: 48 49
        on right: 79
    LLAMADAF <instruction*> (83)
        on left: 50 51
        on right: 16
    RETORNO <instruction*> (84)
        on left: 52 53
        on right: 14
    TYPES <TipoDato> (85)
        on left: 54 55 56 57 58
        on right: 21 22 36 37 46 47 61 62
    LISTAEXP <list_expression*> (86)
        on left: 59 60
        on right: 36 48 50 59
    LISTPARAM <map_struct_dec*> (87)
        on left: 61 62
        on right: 46 61
    EXP <expression*> (88)
        on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 22 23 24 25 26 29 32 33 38 39 40 41 43 52 59 60 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    PRIMITIVE <expression*> (89)
        on left: 80 81 82 83 84 85 86 87 88
        on right: 78


Estado 0

    0 $accept: • START END

    tk_void    desplazar e ir al estado 1
    tk_int     desplazar e ir al estado 2
    tk_string  desplazar e ir al estado 3
    tk_float   desplazar e ir al estado 4
    tk_bool    desplazar e ir al estado 5

    START      ir al estado 6
    LIST_FUNC  ir al estado 7
    MAIN       ir al estado 8
    FUNC       ir al estado 9
    TYPES      ir al estado 10


Estado 1

    5 MAIN: tk_void • rmain tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   58 TYPES: tk_void •

    rmain  desplazar e ir al estado 11

    $default  reduce usando la regla 58 (TYPES)


Estado 2

   54 TYPES: tk_int •

    $default  reduce usando la regla 54 (TYPES)


Estado 3

   55 TYPES: tk_string •

    $default  reduce usando la regla 55 (TYPES)


Estado 4

   56 TYPES: tk_float •

    $default  reduce usando la regla 56 (TYPES)


Estado 5

   57 TYPES: tk_bool •

    $default  reduce usando la regla 57 (TYPES)


Estado 6

    0 $accept: START • END

    END  desplazar e ir al estado 12


Estado 7

    2 START: LIST_FUNC • MAIN
    3 LIST_FUNC: LIST_FUNC • FUNC

    tk_void    desplazar e ir al estado 1
    tk_int     desplazar e ir al estado 2
    tk_string  desplazar e ir al estado 3
    tk_float   desplazar e ir al estado 4
    tk_bool    desplazar e ir al estado 5

    MAIN   ir al estado 13
    FUNC   ir al estado 14
    TYPES  ir al estado 10


Estado 8

    1 START: MAIN •

    $default  reduce usando la regla 1 (START)


Estado 9

    4 LIST_FUNC: FUNC •

    $default  reduce usando la regla 4 (LIST_FUNC)


Estado 10

   46 FUNC: TYPES • id tk_PARA LISTPARAM tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   47     | TYPES • id tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    id  desplazar e ir al estado 15


Estado 11

    5 MAIN: tk_void rmain • tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARA  desplazar e ir al estado 16


Estado 12

    0 $accept: START END •

    $default  aceptar


Estado 13

    2 START: LIST_FUNC MAIN •

    $default  reduce usando la regla 2 (START)


Estado 14

    3 LIST_FUNC: LIST_FUNC FUNC •

    $default  reduce usando la regla 3 (LIST_FUNC)


Estado 15

   46 FUNC: TYPES id • tk_PARA LISTPARAM tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   47     | TYPES id • tk_PARA tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARA  desplazar e ir al estado 17


Estado 16

    5 MAIN: tk_void rmain tk_PARA • tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARC  desplazar e ir al estado 18


Estado 17

   46 FUNC: TYPES id tk_PARA • LISTPARAM tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   47     | TYPES id tk_PARA • tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_void    desplazar e ir al estado 19
    tk_int     desplazar e ir al estado 2
    tk_string  desplazar e ir al estado 3
    tk_float   desplazar e ir al estado 4
    tk_bool    desplazar e ir al estado 5
    tk_PARC    desplazar e ir al estado 20

    TYPES      ir al estado 21
    LISTPARAM  ir al estado 22


Estado 18

    5 MAIN: tk_void rmain tk_PARA tk_PARC • tk_LLAVA LIST_INST tk_LLAVC

    tk_LLAVA  desplazar e ir al estado 23


Estado 19

   58 TYPES: tk_void •

    $default  reduce usando la regla 58 (TYPES)


Estado 20

   47 FUNC: TYPES id tk_PARA tk_PARC • tk_LLAVA LIST_INST tk_LLAVC

    tk_LLAVA  desplazar e ir al estado 24


Estado 21

   62 LISTPARAM: TYPES • id

    id  desplazar e ir al estado 25


Estado 22

   46 FUNC: TYPES id tk_PARA LISTPARAM • tk_PARC tk_LLAVA LIST_INST tk_LLAVC
   61 LISTPARAM: LISTPARAM • ',' TYPES id

    tk_PARC  desplazar e ir al estado 26
    ','      desplazar e ir al estado 27


Estado 23

    5 MAIN: tk_void rmain tk_PARA tk_PARC tk_LLAVA • LIST_INST tk_LLAVC

    error         desplazar e ir al estado 28
    id            desplazar e ir al estado 29
    PRINTF        desplazar e ir al estado 30
    tk_void       desplazar e ir al estado 19
    tk_int        desplazar e ir al estado 2
    tk_string     desplazar e ir al estado 3
    tk_float      desplazar e ir al estado 4
    tk_bool       desplazar e ir al estado 5
    res_IF        desplazar e ir al estado 31
    res_WHILE     desplazar e ir al estado 32
    res_FOR       desplazar e ir al estado 33
    res_BREAK     desplazar e ir al estado 34
    res_CONTINUE  desplazar e ir al estado 35
    res_RETURN    desplazar e ir al estado 36
    res_VECTOR    desplazar e ir al estado 37

    LIST_INST    ir al estado 38
    INSTRUCTION  ir al estado 39
    DECLARAR     ir al estado 40
    ASIGNAR      ir al estado 41
    IF           ir al estado 42
    WHILE        ir al estado 43
    FOR          ir al estado 44
    BREAK        ir al estado 45
    CONT         ir al estado 46
    VECTOR       ir al estado 47
    PRINT        ir al estado 48
    INCREMENTO   ir al estado 49
    LLAMADAF     ir al estado 50
    RETORNO      ir al estado 51
    TYPES        ir al estado 52


Estado 24

   47 FUNC: TYPES id tk_PARA tk_PARC tk_LLAVA • LIST_INST tk_LLAVC

    error         desplazar e ir al estado 28
    id            desplazar e ir al estado 29
    PRINTF        desplazar e ir al estado 30
    tk_void       desplazar e ir al estado 19
    tk_int        desplazar e ir al estado 2
    tk_string     desplazar e ir al estado 3
    tk_float      desplazar e ir al estado 4
    tk_bool       desplazar e ir al estado 5
    res_IF        desplazar e ir al estado 31
    res_WHILE     desplazar e ir al estado 32
    res_FOR       desplazar e ir al estado 33
    res_BREAK     desplazar e ir al estado 34
    res_CONTINUE  desplazar e ir al estado 35
    res_RETURN    desplazar e ir al estado 36
    res_VECTOR    desplazar e ir al estado 37

    LIST_INST    ir al estado 53
    INSTRUCTION  ir al estado 39
    DECLARAR     ir al estado 40
    ASIGNAR      ir al estado 41
    IF           ir al estado 42
    WHILE        ir al estado 43
    FOR          ir al estado 44
    BREAK        ir al estado 45
    CONT         ir al estado 46
    VECTOR       ir al estado 47
    PRINT        ir al estado 48
    INCREMENTO   ir al estado 49
    LLAMADAF     ir al estado 50
    RETORNO      ir al estado 51
    TYPES        ir al estado 52


Estado 25

   62 LISTPARAM: TYPES id •

    $default  reduce usando la regla 62 (LISTPARAM)


Estado 26

   46 FUNC: TYPES id tk_PARA LISTPARAM tk_PARC • tk_LLAVA LIST_INST tk_LLAVC

    tk_LLAVA  desplazar e ir al estado 54


Estado 27

   61 LISTPARAM: LISTPARAM ',' • TYPES id

    tk_void    desplazar e ir al estado 19
    tk_int     desplazar e ir al estado 2
    tk_string  desplazar e ir al estado 3
    tk_float   desplazar e ir al estado 4
    tk_bool    desplazar e ir al estado 5

    TYPES  ir al estado 55


Estado 28

   20 INSTRUCTION: error • ';'

    ';'  desplazar e ir al estado 56


Estado 29

   23 ASIGNAR: id • '=' EXP
   24        | id • tk_LLAVA EXP tk_LLAVC '=' tk_LLAVA EXP tk_LLAVC
   38 VECTOR: id • '.' res_pushB tk_PARA EXP tk_PARC
   39       | id • '.' res_pushF tk_PARA EXP tk_PARC
   40       | id • '.' res_get tk_PARA EXP tk_PARC
   41       | id • '.' res_remove tk_PARA EXP tk_PARC
   42       | id • '.' res_size tk_PARA tk_PARC
   44 INCREMENTO: id • mas_mas
   45           | id • menos_menos
   50 LLAMADAF: id • tk_PARA LISTAEXP tk_PARC
   51         | id • tk_PARA tk_PARC

    tk_PARA      desplazar e ir al estado 57
    tk_LLAVA     desplazar e ir al estado 58
    mas_mas      desplazar e ir al estado 59
    menos_menos  desplazar e ir al estado 60
    '='          desplazar e ir al estado 61
    '.'          desplazar e ir al estado 62


Estado 30

   43 PRINT: PRINTF • tk_PARA EXP tk_PARC

    tk_PARA  desplazar e ir al estado 63


Estado 31

   25 IF: res_IF • tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELIF_LIST ELSE
   26   | res_IF • tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELSE

    tk_PARA  desplazar e ir al estado 64


Estado 32

   32 WHILE: res_WHILE • tk_PARA EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARA  desplazar e ir al estado 65


Estado 33

   33 FOR: res_FOR • tk_PARA DECLARAR ';' EXP ';' ASIGNAR tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_PARA  desplazar e ir al estado 66


Estado 34

   34 BREAK: res_BREAK •

    $default  reduce usando la regla 34 (BREAK)


Estado 35

   35 CONT: res_CONTINUE •

    $default  reduce usando la regla 35 (CONT)


Estado 36

   52 RETORNO: res_RETURN • EXP
   53        | res_RETURN •

    NUMERO      desplazar e ir al estado 67
    id          desplazar e ir al estado 68
    CADENA      desplazar e ir al estado 69
    DECIMAL     desplazar e ir al estado 70
    tk_PARA     desplazar e ir al estado 71
    tk_true     desplazar e ir al estado 72
    tk_false    desplazar e ir al estado 73
    res_mean    desplazar e ir al estado 74
    res_median  desplazar e ir al estado 75
    res_mode    desplazar e ir al estado 76

    $default  reduce usando la regla 53 (RETORNO)

    CALL_EXP   ir al estado 77
    EXP        ir al estado 78
    PRIMITIVE  ir al estado 79


Estado 37

   36 VECTOR: res_VECTOR • tk_menorq TYPES tk_mayorq id '=' tk_CORCHA LISTAEXP tk_CORCHC
   37       | res_VECTOR • tk_menorq TYPES tk_mayorq id

    tk_menorq  desplazar e ir al estado 80


Estado 38

    5 MAIN: tk_void rmain tk_PARA tk_PARC tk_LLAVA LIST_INST • tk_LLAVC
    6 LIST_INST: LIST_INST • INSTRUCTION

    error         desplazar e ir al estado 28
    id            desplazar e ir al estado 29
    PRINTF        desplazar e ir al estado 30
    tk_void       desplazar e ir al estado 19
    tk_int        desplazar e ir al estado 2
    tk_string     desplazar e ir al estado 3
    tk_float      desplazar e ir al estado 4
    tk_bool       desplazar e ir al estado 5
    tk_LLAVC      desplazar e ir al estado 81
    res_IF        desplazar e ir al estado 31
    res_WHILE     desplazar e ir al estado 32
    res_FOR       desplazar e ir al estado 33
    res_BREAK     desplazar e ir al estado 34
    res_CONTINUE  desplazar e ir al estado 35
    res_RETURN    desplazar e ir al estado 36
    res_VECTOR    desplazar e ir al estado 37

    INSTRUCTION  ir al estado 82
    DECLARAR     ir al estado 40
    ASIGNAR      ir al estado 41
    IF           ir al estado 42
    WHILE        ir al estado 43
    FOR          ir al estado 44
    BREAK        ir al estado 45
    CONT         ir al estado 46
    VECTOR       ir al estado 47
    PRINT        ir al estado 48
    INCREMENTO   ir al estado 49
    LLAMADAF     ir al estado 50
    RETORNO      ir al estado 51
    TYPES        ir al estado 52


Estado 39

    7 LIST_INST: INSTRUCTION •

    $default  reduce usando la regla 7 (LIST_INST)


Estado 40

    9 INSTRUCTION: DECLARAR • ';'

    ';'  desplazar e ir al estado 83


Estado 41

   10 INSTRUCTION: ASIGNAR • ';'

    ';'  desplazar e ir al estado 84


Estado 42

   19 INSTRUCTION: IF •

    $default  reduce usando la regla 19 (INSTRUCTION)


Estado 43

   17 INSTRUCTION: WHILE •

    $default  reduce usando la regla 17 (INSTRUCTION)


Estado 44

   18 INSTRUCTION: FOR •

    $default  reduce usando la regla 18 (INSTRUCTION)


Estado 45

   12 INSTRUCTION: BREAK • ';'

    ';'  desplazar e ir al estado 85


Estado 46

   13 INSTRUCTION: CONT • ';'

    ';'  desplazar e ir al estado 86


Estado 47

   11 INSTRUCTION: VECTOR • ';'

    ';'  desplazar e ir al estado 87


Estado 48

    8 INSTRUCTION: PRINT • ';'

    ';'  desplazar e ir al estado 88


Estado 49

   15 INSTRUCTION: INCREMENTO • ';'

    ';'  desplazar e ir al estado 89


Estado 50

   16 INSTRUCTION: LLAMADAF • ';'

    ';'  desplazar e ir al estado 90


Estado 51

   14 INSTRUCTION: RETORNO • ';'

    ';'  desplazar e ir al estado 91


Estado 52

   21 DECLARAR: TYPES • id
   22         | TYPES • id '=' EXP

    id  desplazar e ir al estado 92


Estado 53

    6 LIST_INST: LIST_INST • INSTRUCTION
   47 FUNC: TYPES id tk_PARA tk_PARC tk_LLAVA LIST_INST • tk_LLAVC

    error         desplazar e ir al estado 28
    id            desplazar e ir al estado 29
    PRINTF        desplazar e ir al estado 30
    tk_void       desplazar e ir al estado 19
    tk_int        desplazar e ir al estado 2
    tk_string     desplazar e ir al estado 3
    tk_float      desplazar e ir al estado 4
    tk_bool       desplazar e ir al estado 5
    tk_LLAVC      desplazar e ir al estado 93
    res_IF        desplazar e ir al estado 31
    res_WHILE     desplazar e ir al estado 32
    res_FOR       desplazar e ir al estado 33
    res_BREAK     desplazar e ir al estado 34
    res_CONTINUE  desplazar e ir al estado 35
    res_RETURN    desplazar e ir al estado 36
    res_VECTOR    desplazar e ir al estado 37

    INSTRUCTION  ir al estado 82
    DECLARAR     ir al estado 40
    ASIGNAR      ir al estado 41
    IF           ir al estado 42
    WHILE        ir al estado 43
    FOR          ir al estado 44
    BREAK        ir al estado 45
    CONT         ir al estado 46
    VECTOR       ir al estado 47
    PRINT        ir al estado 48
    INCREMENTO   ir al estado 49
    LLAMADAF     ir al estado 50
    RETORNO      ir al estado 51
    TYPES        ir al estado 52


Estado 54

   46 FUNC: TYPES id tk_PARA LISTPARAM tk_PARC tk_LLAVA • LIST_INST tk_LLAVC

    error         desplazar e ir al estado 28
    id            desplazar e ir al estado 29
    PRINTF        desplazar e ir al estado 30
    tk_void       desplazar e ir al estado 19
    tk_int        desplazar e ir al estado 2
    tk_string     desplazar e ir al estado 3
    tk_float      desplazar e ir al estado 4
    tk_bool       desplazar e ir al estado 5
    res_IF        desplazar e ir al estado 31
    res_WHILE     desplazar e ir al estado 32
    res_FOR       desplazar e ir al estado 33
    res_BREAK     desplazar e ir al estado 34
    res_CONTINUE  desplazar e ir al estado 35
    res_RETURN    desplazar e ir al estado 36
    res_VECTOR    desplazar e ir al estado 37

    LIST_INST    ir al estado 94
    INSTRUCTION  ir al estado 39
    DECLARAR     ir al estado 40
    ASIGNAR      ir al estado 41
    IF           ir al estado 42
    WHILE        ir al estado 43
    FOR          ir al estado 44
    BREAK        ir al estado 45
    CONT         ir al estado 46
    VECTOR       ir al estado 47
    PRINT        ir al estado 48
    INCREMENTO   ir al estado 49
    LLAMADAF     ir al estado 50
    RETORNO      ir al estado 51
    TYPES        ir al estado 52


Estado 55

   61 LISTPARAM: LISTPARAM ',' TYPES • id

    id  desplazar e ir al estado 95


Estado 56

   20 INSTRUCTION: error ';' •

    $default  reduce usando la regla 20 (INSTRUCTION)


Estado 57

   50 LLAMADAF: id tk_PARA • LISTAEXP tk_PARC
   51         | id tk_PARA • tk_PARC

    NUMERO      desplazar e ir al estado 67
    id          desplazar e ir al estado 68
    CADENA      desplazar e ir al estado 69
    DECIMAL     desplazar e ir al estado 70
    tk_PARA     desplazar e ir al estado 71
    tk_PARC     desplazar e ir al estado 96
    tk_true     desplazar e ir al estado 72
    tk_false    desplazar e ir al estado 73
    res_mean    desplazar e ir al estado 74
    res_median  desplazar e ir al estado 75
    res_mode    desplazar e ir al estado 76

    CALL_EXP   ir al estado 77
    LISTAEXP   ir al estado 97
    EXP        ir al estado 98
    PRIMITIVE  ir al estado 79


Estado 58

   24 ASIGNAR: id tk_LLAVA • EXP tk_LLAVC '=' tk_LLAVA EXP tk_LLAVC

    NUMERO      desplazar e ir al estado 67
    id          desplazar e ir al estado 68
    CADENA      desplazar e ir al estado 69
    DECIMAL     desplazar e ir al estado 70
    tk_PARA     desplazar e ir al estado 71
    tk_true     desplazar e ir al estado 72
    tk_false    desplazar e ir al estado 73
    res_mean    desplazar e ir al estado 74
    res_median  desplazar e ir al estado 75
    res_mode    desplazar e ir al estado 76

    CALL_EXP   ir al estado 77
    EXP        ir al estado 99
    PRIMITIVE  ir al estado 79


Estado 59

   44 INCREMENTO: id mas_mas •

    $default  reduce usando la regla 44 (INCREMENTO)


Estado 60

   45 INCREMENTO: id menos_menos •

    $default  reduce usando la regla 45 (INCREMENTO)


Estado 61

   23 ASIGNAR: id '=' • EXP

    NUMERO      desplazar e ir al estado 67
    id          desplazar e ir al estado 68
    CADENA      desplazar e ir al estado 69
    DECIMAL     desplazar e ir al estado 70
    tk_PARA     desplazar e ir al estado 71
    tk_true     desplazar e ir al estado 72
    tk_false    desplazar e ir al estado 73
    res_mean    desplazar e ir al estado 74
    res_median  desplazar e ir al estado 75
    res_mode    desplazar e ir al estado 76

    CALL_EXP   ir al estado 77
    EXP        ir al estado 100
    PRIMITIVE  ir al estado 79


Estado 62

   38 VECTOR: id '.' • res_pushB tk_PARA EXP tk_PARC
   39       | id '.' • res_pushF tk_PARA EXP tk_PARC
   40       | id '.' • res_get tk_PARA EXP tk_PARC
   41       | id '.' • res_remove tk_PARA EXP tk_PARC
   42       | id '.' • res_size tk_PARA tk_PARC

    res_pushB   desplazar e ir al estado 101
    res_pushF   desplazar e ir al estado 102
    res_get     desplazar e ir al estado 103
    res_remove  desplazar e ir al estado 104
    res_size    desplazar e ir al estado 105


Estado 63

   43 PRINT: PRINTF tk_PARA • EXP tk_PARC

    NUMERO      desplazar e ir al estado 67
    id          desplazar e ir al estado 68
    CADENA      desplazar e ir al estado 69
    DECIMAL     desplazar e ir al estado 70
    tk_PARA     desplazar e ir al estado 71
    tk_true     desplazar e ir al estado 72
    tk_false    desplazar e ir al estado 73
    res_mean    desplazar e ir al estado 74
    res_median  desplazar e ir al estado 75
    res_mode    desplazar e ir al estado 76

    CALL_EXP   ir al estado 77
    EXP        ir al estado 106
    PRIMITIVE  ir al estado 79


Estado 64

   25 IF: res_IF tk_PARA • EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELIF_LIST ELSE
   26   | res_IF tk_PARA • EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC ELSE

    NUMERO      desplazar e ir al estado 67
    id          desplazar e ir al estado 68
    CADENA      desplazar e ir al estado 69
    DECIMAL     desplazar e ir al estado 70
    tk_PARA     desplazar e ir al estado 71
    tk_true     desplazar e ir al estado 72
    tk_false    desplazar e ir al estado 73
    res_mean    desplazar e ir al estado 74
    res_median  desplazar e ir al estado 75
    res_mode    desplazar e ir al estado 76

    CALL_EXP   ir al estado 77
    EXP        ir al estado 107
    PRIMITIVE  ir al estado 79


Estado 65

   32 WHILE: res_WHILE tk_PARA • EXP tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    NUMERO      desplazar e ir al estado 67
    id          desplazar e ir al estado 68
    CADENA      desplazar e ir al estado 69
    DECIMAL     desplazar e ir al estado 70
    tk_PARA     desplazar e ir al estado 71
    tk_true     desplazar e ir al estado 72
    tk_false    desplazar e ir al estado 73
    res_mean    desplazar e ir al estado 74
    res_median  desplazar e ir al estado 75
    res_mode    desplazar e ir al estado 76

    CALL_EXP   ir al estado 77
    EXP        ir al estado 108
    PRIMITIVE  ir al estado 79


Estado 66

   33 FOR: res_FOR tk_PARA • DECLARAR ';' EXP ';' ASIGNAR tk_PARC tk_LLAVA LIST_INST tk_LLAVC

    tk_void    desplazar e ir al estado 19
    tk_int     desplazar e ir al estado 2
    tk_string  desplazar e ir al estado 3
    tk_float   desplazar e ir al estado 4
    tk_bool    desplazar e ir al estado 5

    DECLARAR  ir al estado 109
    TYPES     ir al estado 52


Estado 67

   80 PRIMITIVE: NUMERO •

    $default  reduce usando la regla 80 (PRIMITIVE)


Estado 68

   48 CALL_EXP: id • tk_PARA LISTAEXP tk_PARC
   49         | id • tk_PARA tk_PARC
   82 PRIMITIVE: id •

    tk_PARA  desplazar e ir al estado 110

    $default  reduce usando la regla 82 (PRIMITIVE)


Estado 69

   81 PRIMITIVE: CADENA •

    $default  reduce usando la regla 81 (PRIMITIVE)


Estado 70

   83 PRIMITIVE: DECIMAL •

    $default  reduce usando la regla 83 (PRIMITIVE)


Estado 71

   68 EXP: tk_PARA • EXP tk_PARC

    NUMERO      desplazar e ir al estado 67
    id          desplazar e ir al estado 68
    CADENA      desplazar e ir al estado 69
    DECIMAL     desplazar e ir al estado 70
    tk_PARA     desplazar e ir al estado 71
    tk_true     desplazar e ir al estado 72
    tk_false    desplazar e ir al estado 73
    res_mean    desplazar e ir al estado 74
    res_median  desplazar e ir al estado 75
    res_mode    desplazar e ir al estado 76

    CALL_EXP   ir al estado 77
    EXP        ir al estado 111
    PRIMITIVE  ir al estado 79


Estado 72

   84 PRIMITIVE: tk_true •

    $default  reduce usando la regla 84 (PRIMITIVE)


Estado 73

   85 PRIMITIVE: tk_false •

    $default  reduce usando la regla 85 (PRIMITIVE)


Estado 74

   86 PRIMITIVE: res_mean • tk_PARA id tk_PARC
